Fix code coverage of core after moving LP and DEA